--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <main class="container">
         <h1 class="text-lg">オセロ</h1>
-        <div id="board"></div>
+        <div id="board" class="board"></div>
       </main>
     </div>
     <script type="module" src="/src/main.ts"></script>
