chore: Add reset button to Othello game board

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <main class="container">
         <h1 class="text-lg">オセロ</h1>
         <div id="board" class="board"></div>
+        <div>
+          <button id="reset" class="bg-gray-400 rounded">リセット</button>
+        </div>
       </main>
     </div>
     <script type="module" src="/src/main.ts"></script>
