chore: Update Othello game board to display piece count

--- a/index.html
+++ b/index.html
@@ -14,14 +14,24 @@
           class="p-4 my-4 text-sm text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400"
           role="alert"
         >
-          <p>
-            <span id="black-count">現在のターン</span> : <span id="white-count"></span>
-            <span id="current-player"></span>
+          <span>現在のターン</span> :
+          <span id="current-player"></span>
+        </div>
+        <div class="mt-4">
+          <p id="">
+            黒 :
+            <span id="black-count"></span>
+          </p>
+          <p id="">
+            白 :
+            <span id="white-count"></span>
           </p>
         </div>
         <div id="board" class="board"></div>
         <div class="mt-4">
-          <button id="reset" class="bg-gray-300 rounded px-2 py-1">リセット</button>
+          <button id="reset" class="bg-gray-300 rounded px-2 py-1">
+            リセット
+          </button>
         </div>
       </main>
     </div>
